--- a/css/style.css
+++ b/css/style.css
@@ -94,8 +94,13 @@ body {
   align-items: flex-start;
   justify-content: space-between;
 }
+
 .posts {
+  display: none;
   width: 67%;
+}
+.posts.visible {
+  display: block;
 }
 .post {
   background-color: #fff;
@@ -123,13 +128,17 @@ body {
 }
 .tags {
   margin-bottom: 22px;
+  color: #bfbfbf;
 }
 .tag {
   color: #bfbfbf;
   font-size: 14px;
   line-height: 22px;
-  margin-right: 10px;
   text-decoration: none;
+}
+
+.tag + .tag {
+  margin-left: 10px;
 }
 .post-footer {
   border-top: 1px solid #e8e8e8;
@@ -173,6 +182,7 @@ body {
   height: 34px;
   margin-left: 9px;
   border-radius: 4px;
+  object-fit: cover;
 }
 .author-username {
   display: block;
@@ -188,6 +198,7 @@ body {
 }
 
 .sidebar {
+  margin-left: auto;
   width: 31%;
 }
 
@@ -261,18 +272,24 @@ body {
   background-color: #fafafa;
   border: 1px solid #e8e8e8;
   padding: 15px 25px;
+}
+
+.user-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 .user-info {
   display: flex;
   align-items: center;
   text-decoration: none;
+  margin-right: auto;
 }
 .user-avatar {
   border-radius: 50%;
   margin-right: 17px;
+  object-fit: cover;
 }
 .user-name {
   font-weight: 600;
@@ -280,6 +297,57 @@ body {
   line-height: 24px;
   color: #595959;
 }
+.edit {
+  margin-right: 10px;
+}
+
+.edit-title {
+  text-align: center;
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: 600;
+  color: #595959;
+  text-align: left;
+}
+
+.edit-container {
+  display: none;
+}
+
+.edit-container.visible {
+  display: block;
+}
+
+.edit-label {
+  display: block;
+  margin-bottom: 5px;
+  text-align: center;
+}
+
+.edit-input {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  padding: 5px 10px;
+}
+
+.edit-btn {
+  background-color: #fa8c16;
+  border: none;
+  border-radius: 2px;
+  text-transform: uppercase;
+  cursor: pointer;
+  line-height: 32px;
+  font-size: 14px;
+  margin-bottom: 15px;
+  width: 100%;
+}
+
+.icon-edit {
+  width: 20px;
+  height: 20px;
+}
+
 .icon-exit {
   width: 20px;
   height: 20px;
@@ -345,6 +413,9 @@ body {
   justify-content: center;
   width: 100%;
   margin-top: 20px;
+}
+.button-new-post.visible {
+  display: flex;
 }
 .icon-fire {
   fill: #fff;
@@ -413,15 +484,22 @@ body {
   color: #ffffff;
 }
 .add-post {
-  display: flex;
+  display: none;
   flex-direction: column;
+  width: 67%;
+}
+
+.add-post.visible {
+  display: flex;
 }
 .add-title,
-.add-text {
+.add-text,
+.add-tags {
   background: #ffffff;
   border: 1px solid #e8e8e8;
   padding: 23px 30px;
   margin-bottom: 16px;
+  resize: none;
 }
 .add-text {
   min-height: 362px;
